tauri-typed-ipc-macros/src/snapshots/tauri_typed_ipc_macros__procedures__tests__async_expansion.snap
---
source: tauri-typed-ipc-macros/src/procedures.rs
expression: "prettyplease::unparse(&file)"
---
trait Backup {
    fn last(&self) -> String;
    fn save(
        &self,
        path: String,
    ) -> impl ::core::future::Future<
        Output = Result<(), SaveError>,
    > + ::core::marker::Send;
}
///Generated by `#[ttipc::procedures]`: routes a `(name, args)` pair to the matching [`Backup`] procedure.
trait BackupDispatch: Backup {
    /// Routes one `(procedure, args)` call to the matching method:
    /// deserializes the wire arguments, resolves injected
    /// parameters from `ctx`, and returns the dispatch outcome.
    fn dispatch(
        self: ::std::sync::Arc<Self>,
        _ctx: &::tauri_typed_ipc::Context<'_>,
        procedure: &str,
        args: ::tauri_typed_ipc::__private::serde_json::Value,
    ) -> ::tauri_typed_ipc::Dispatch
    where
        Self: ::core::marker::Send + ::core::marker::Sync + 'static,
    {
        match procedure {
            "last" => {
                ::tauri_typed_ipc::Dispatch::Sync(
                    (|| -> ::core::result::Result<
                        ::tauri_typed_ipc::Outcome,
                        ::tauri_typed_ipc::DispatchError,
                    > {
                        #[derive(::tauri_typed_ipc::__private::serde::Deserialize)]
                        #[serde(crate = "::tauri_typed_ipc::__private::serde")]
                        struct Args {}
                        let Args {} = ::tauri_typed_ipc::__private::serde_json::from_value(
                                args,
                            )
                            .map_err(::tauri_typed_ipc::DispatchError::Deserialize)?;
                        ::tauri_typed_ipc::__private::serde_json::to_value(
                                Backup::last(&*self),
                            )
                            .map(::tauri_typed_ipc::Outcome::Resolve)
                            .map_err(::tauri_typed_ipc::DispatchError::Serialize)
                    })(),
                )
            }
            "save" => {
                #[derive(::tauri_typed_ipc::__private::serde::Deserialize)]
                #[serde(crate = "::tauri_typed_ipc::__private::serde")]
                struct Args {
                    path: String,
                }
                match ::tauri_typed_ipc::__private::serde_json::from_value::<
                    Args,
                >(args) {
                    ::core::result::Result::Ok(Args { path }) => {
                        ::tauri_typed_ipc::Dispatch::Async(
                            ::std::boxed::Box::pin(async move {
                                match Backup::save(&*self, path).await {
                                    ::core::result::Result::Ok(value) => {
                                        ::tauri_typed_ipc::__private::serde_json::to_value(value)
                                            .map(::tauri_typed_ipc::Outcome::Resolve)
                                            .map_err(::tauri_typed_ipc::DispatchError::Serialize)
                                    }
                                    ::core::result::Result::Err(error) => {
                                        ::tauri_typed_ipc::__private::serde_json::to_value(error)
                                            .map(::tauri_typed_ipc::Outcome::Reject)
                                            .map_err(::tauri_typed_ipc::DispatchError::Serialize)
                                    }
                                }
                            }),
                        )
                    }
                    ::core::result::Result::Err(error) => {
                        ::tauri_typed_ipc::Dispatch::Sync(
                            ::core::result::Result::Err(
                                ::tauri_typed_ipc::DispatchError::Deserialize(error),
                            ),
                        )
                    }
                }
            }
            _ => {
                ::tauri_typed_ipc::Dispatch::Sync(
                    ::core::result::Result::Err(
                        ::tauri_typed_ipc::DispatchError::UnknownProcedure(
                            ::std::borrow::ToOwned::to_owned(procedure),
                        ),
                    ),
                )
            }
        }
    }
    /// Type-erases this set for registration with
    /// `ttipc::handler`. The bounds are tauri's
    /// `invoke_handler` bounds, inherited through
    /// `ttipc::Procedures::new`.
    fn into_procedures(self) -> ::tauri_typed_ipc::Procedures
    where
        Self: ::core::marker::Sized + ::core::marker::Send + ::core::marker::Sync
            + 'static,
    {
        let this = ::std::sync::Arc::new(self);
        ::tauri_typed_ipc::Procedures::new(
            &["last", "save"],
            move |ctx, procedure, args| {
                BackupDispatch::dispatch(
                    ::std::sync::Arc::clone(&this),
                    ctx,
                    procedure,
                    args,
                )
            },
        )
    }
}
impl<T: Backup> BackupDispatch for T {}
///Generated by `#[ttipc::procedures]`: the binding descriptor for [`Backup`]. Hand to `ttipc::Bindings::register` to emit the TypeScript client.
struct BackupProcedures;
impl ::tauri_typed_ipc::ProcedureSet for BackupProcedures {
    const OBJECT: &'static str = "backup";
    fn procedures(
        types: &mut ::tauri_typed_ipc::__private::specta::Types,
    ) -> ::std::vec::Vec<::tauri_typed_ipc::ProcedureType> {
        ::std::vec![
            ::tauri_typed_ipc::ProcedureType { name : "last", args : ::std::vec![],
            channels : ::std::vec![], output : < String as
            ::tauri_typed_ipc::__private::specta::Type > ::definition(types), error :
            ::core::option::Option::None, }, ::tauri_typed_ipc::ProcedureType { name :
            "save", args : ::std::vec![("path", < String as
            ::tauri_typed_ipc::__private::specta::Type > ::definition(types)),], channels
            : ::std::vec![], output : < () as ::tauri_typed_ipc::__private::specta::Type
            > ::definition(types), error : ::core::option::Option::Some(< SaveError as
            ::tauri_typed_ipc::ErrorSet > ::error_type()), },
        ]
    }
}
