tauri-typed-ipc-macros/src/snapshots/tauri_typed_ipc_macros__procedures__tests__async_injection_expansion.snap
---
source: tauri-typed-ipc-macros/src/procedures.rs
expression: "prettyplease::unparse(&file)"
---
trait Vault {
    fn store(
        &self,
        app: tauri::AppHandle,
        hits: tauri::State<'_, Hits>,
        label: String,
    ) -> impl ::core::future::Future<Output = u32> + ::core::marker::Send;
}
///Generated by `#[ttipc::procedures]`: routes a `(name, args)` pair to the matching [`Vault`] procedure.
trait VaultDispatch: Vault {
    /// Routes one `(procedure, args)` call to the matching method:
    /// deserializes the wire arguments, resolves injected
    /// parameters from `ctx`, and returns the dispatch outcome.
    fn dispatch(
        self: ::std::sync::Arc<Self>,
        _ctx: &::tauri_typed_ipc::Context<'_>,
        procedure: &str,
        args: ::tauri_typed_ipc::__private::serde_json::Value,
    ) -> ::tauri_typed_ipc::Dispatch
    where
        Self: ::core::marker::Send + ::core::marker::Sync + 'static,
    {
        match procedure {
            "store" => {
                #[derive(::tauri_typed_ipc::__private::serde::Deserialize)]
                #[serde(crate = "::tauri_typed_ipc::__private::serde")]
                struct Args {
                    label: String,
                }
                match ::tauri_typed_ipc::__private::serde_json::from_value::<
                    Args,
                >(args) {
                    ::core::result::Result::Ok(Args { label }) => {
                        let app = match _ctx.extract::<tauri::AppHandle>() {
                            ::core::option::Option::Some(value) => value,
                            ::core::option::Option::None => {
                                return ::tauri_typed_ipc::Dispatch::Sync(
                                    ::core::result::Result::Err(
                                        ::tauri_typed_ipc::DispatchError::MissingInjection(
                                            ::core::any::type_name::<tauri::AppHandle>(),
                                        ),
                                    ),
                                );
                            }
                        };
                        let __ttipc_state_manager = match _ctx.state_manager() {
                            ::core::option::Option::Some(manager) => manager,
                            ::core::option::Option::None => {
                                return ::tauri_typed_ipc::Dispatch::Sync(
                                    ::core::result::Result::Err(
                                        ::tauri_typed_ipc::DispatchError::MissingState(
                                            ::core::any::type_name::<Hits>(),
                                        ),
                                    ),
                                );
                            }
                        };
                        ::tauri_typed_ipc::Dispatch::Async(
                            ::std::boxed::Box::pin(async move {
                                let hits = __ttipc_state_manager
                                    .try_get::<Hits>()
                                    .ok_or(
                                        ::tauri_typed_ipc::DispatchError::MissingState(
                                            ::core::any::type_name::<Hits>(),
                                        ),
                                    )?;
                                ::tauri_typed_ipc::__private::serde_json::to_value(
                                        Vault::store(&*self, app, hits, label).await,
                                    )
                                    .map(::tauri_typed_ipc::Outcome::Resolve)
                                    .map_err(::tauri_typed_ipc::DispatchError::Serialize)
                            }),
                        )
                    }
                    ::core::result::Result::Err(error) => {
                        ::tauri_typed_ipc::Dispatch::Sync(
                            ::core::result::Result::Err(
                                ::tauri_typed_ipc::DispatchError::Deserialize(error),
                            ),
                        )
                    }
                }
            }
            _ => {
                ::tauri_typed_ipc::Dispatch::Sync(
                    ::core::result::Result::Err(
                        ::tauri_typed_ipc::DispatchError::UnknownProcedure(
                            ::std::borrow::ToOwned::to_owned(procedure),
                        ),
                    ),
                )
            }
        }
    }
    /// Type-erases this set for registration with
    /// `ttipc::handler`. The bounds are tauri's
    /// `invoke_handler` bounds, inherited through
    /// `ttipc::Procedures::new`.
    fn into_procedures(self) -> ::tauri_typed_ipc::Procedures
    where
        Self: ::core::marker::Sized + ::core::marker::Send + ::core::marker::Sync
            + 'static,
    {
        let this = ::std::sync::Arc::new(self);
        ::tauri_typed_ipc::Procedures::new(
            &["store"],
            move |ctx, procedure, args| {
                VaultDispatch::dispatch(
                    ::std::sync::Arc::clone(&this),
                    ctx,
                    procedure,
                    args,
                )
            },
        )
    }
}
impl<T: Vault> VaultDispatch for T {}
///Generated by `#[ttipc::procedures]`: the binding descriptor for [`Vault`]. Hand to `ttipc::Bindings::register` to emit the TypeScript client.
struct VaultProcedures;
impl ::tauri_typed_ipc::ProcedureSet for VaultProcedures {
    const OBJECT: &'static str = "vault";
    fn procedures(
        types: &mut ::tauri_typed_ipc::__private::specta::Types,
    ) -> ::std::vec::Vec<::tauri_typed_ipc::ProcedureType> {
        ::std::vec![
            ::tauri_typed_ipc::ProcedureType { name : "store", args :
            ::std::vec![("label", < String as ::tauri_typed_ipc::__private::specta::Type
            > ::definition(types)),], channels : ::std::vec![], output : < u32 as
            ::tauri_typed_ipc::__private::specta::Type > ::definition(types), error :
            ::core::option::Option::None, },
        ]
    }
}
