tauri-typed-ipc-macros/src/snapshots/tauri_typed_ipc_macros__procedures__tests__channel_expansion.snap
---
source: tauri-typed-ipc-macros/src/procedures.rs
expression: "prettyplease::unparse(&file)"
---
trait Downloads {
    fn track(&self, progress: ttipc::Channel<Progress>);
    fn track_async(
        &self,
        progress: ttipc::Channel<Progress>,
    ) -> impl ::core::future::Future<Output = ()> + ::core::marker::Send;
}
///Generated by `#[ttipc::procedures]`: routes a `(name, args)` pair to the matching [`Downloads`] procedure.
trait DownloadsDispatch: Downloads {
    /// Routes one `(procedure, args)` call to the matching method:
    /// deserializes the wire arguments, resolves injected
    /// parameters from `ctx`, and returns the dispatch outcome.
    fn dispatch(
        self: ::std::sync::Arc<Self>,
        _ctx: &::tauri_typed_ipc::Context<'_>,
        procedure: &str,
        args: ::tauri_typed_ipc::__private::serde_json::Value,
    ) -> ::tauri_typed_ipc::Dispatch
    where
        Self: ::core::marker::Send + ::core::marker::Sync + 'static,
    {
        match procedure {
            "track" => {
                ::tauri_typed_ipc::Dispatch::Sync(
                    (|| -> ::core::result::Result<
                        ::tauri_typed_ipc::Outcome,
                        ::tauri_typed_ipc::DispatchError,
                    > {
                        #[derive(::tauri_typed_ipc::__private::serde::Deserialize)]
                        #[serde(crate = "::tauri_typed_ipc::__private::serde")]
                        struct Args {
                            progress: ::tauri_typed_ipc::__private::tauri::ipc::JavaScriptChannelId,
                        }
                        let Args { progress } = ::tauri_typed_ipc::__private::serde_json::from_value(
                                args,
                            )
                            .map_err(::tauri_typed_ipc::DispatchError::Deserialize)?;
                        let progress = _ctx
                            .channel::<Progress>(progress)
                            .ok_or(
                                ::tauri_typed_ipc::DispatchError::MissingChannel(
                                    ::core::any::type_name::<
                                        ::tauri_typed_ipc::Channel<Progress>,
                                    >(),
                                ),
                            )?;
                        ::tauri_typed_ipc::__private::serde_json::to_value(
                                Downloads::track(&*self, progress),
                            )
                            .map(::tauri_typed_ipc::Outcome::Resolve)
                            .map_err(::tauri_typed_ipc::DispatchError::Serialize)
                    })(),
                )
            }
            "track_async" => {
                #[derive(::tauri_typed_ipc::__private::serde::Deserialize)]
                #[serde(crate = "::tauri_typed_ipc::__private::serde")]
                struct Args {
                    progress: ::tauri_typed_ipc::__private::tauri::ipc::JavaScriptChannelId,
                }
                match ::tauri_typed_ipc::__private::serde_json::from_value::<
                    Args,
                >(args) {
                    ::core::result::Result::Ok(Args { progress }) => {
                        let progress = match _ctx.channel::<Progress>(progress) {
                            ::core::option::Option::Some(channel) => channel,
                            ::core::option::Option::None => {
                                return ::tauri_typed_ipc::Dispatch::Sync(
                                    ::core::result::Result::Err(
                                        ::tauri_typed_ipc::DispatchError::MissingChannel(
                                            ::core::any::type_name::<
                                                ::tauri_typed_ipc::Channel<Progress>,
                                            >(),
                                        ),
                                    ),
                                );
                            }
                        };
                        ::tauri_typed_ipc::Dispatch::Async(
                            ::std::boxed::Box::pin(async move {
                                ::tauri_typed_ipc::__private::serde_json::to_value(
                                        Downloads::track_async(&*self, progress).await,
                                    )
                                    .map(::tauri_typed_ipc::Outcome::Resolve)
                                    .map_err(::tauri_typed_ipc::DispatchError::Serialize)
                            }),
                        )
                    }
                    ::core::result::Result::Err(error) => {
                        ::tauri_typed_ipc::Dispatch::Sync(
                            ::core::result::Result::Err(
                                ::tauri_typed_ipc::DispatchError::Deserialize(error),
                            ),
                        )
                    }
                }
            }
            _ => {
                ::tauri_typed_ipc::Dispatch::Sync(
                    ::core::result::Result::Err(
                        ::tauri_typed_ipc::DispatchError::UnknownProcedure(
                            ::std::borrow::ToOwned::to_owned(procedure),
                        ),
                    ),
                )
            }
        }
    }
    /// Type-erases this set for registration with
    /// `ttipc::handler`. The bounds are tauri's
    /// `invoke_handler` bounds, inherited through
    /// `ttipc::Procedures::new`.
    fn into_procedures(self) -> ::tauri_typed_ipc::Procedures
    where
        Self: ::core::marker::Sized + ::core::marker::Send + ::core::marker::Sync
            + 'static,
    {
        let this = ::std::sync::Arc::new(self);
        ::tauri_typed_ipc::Procedures::new(
            &["track", "track_async"],
            move |ctx, procedure, args| {
                DownloadsDispatch::dispatch(
                    ::std::sync::Arc::clone(&this),
                    ctx,
                    procedure,
                    args,
                )
            },
        )
    }
}
impl<T: Downloads> DownloadsDispatch for T {}
///Generated by `#[ttipc::procedures]`: the binding descriptor for [`Downloads`]. Hand to `ttipc::Bindings::register` to emit the TypeScript client.
struct DownloadsProcedures;
impl ::tauri_typed_ipc::ProcedureSet for DownloadsProcedures {
    const OBJECT: &'static str = "downloads";
    fn procedures(
        types: &mut ::tauri_typed_ipc::__private::specta::Types,
    ) -> ::std::vec::Vec<::tauri_typed_ipc::ProcedureType> {
        ::std::vec![
            ::tauri_typed_ipc::ProcedureType { name : "track", args : ::std::vec![],
            channels : ::std::vec![("progress", < Progress as
            ::tauri_typed_ipc::__private::specta::Type > ::definition(types)),], output :
            < () as ::tauri_typed_ipc::__private::specta::Type > ::definition(types),
            error : ::core::option::Option::None, }, ::tauri_typed_ipc::ProcedureType {
            name : "track_async", args : ::std::vec![], channels :
            ::std::vec![("progress", < Progress as
            ::tauri_typed_ipc::__private::specta::Type > ::definition(types)),], output :
            < () as ::tauri_typed_ipc::__private::specta::Type > ::definition(types),
            error : ::core::option::Option::None, },
        ]
    }
}
