tauri-typed-ipc-macros/src/snapshots/tauri_typed_ipc_macros__procedures__tests__state_expansion.snap
---
source: tauri-typed-ipc-macros/src/procedures.rs
expression: "prettyplease::unparse(&file)"
---
trait Counted {
    fn hits(&self, state: tauri::State<'_, Hits>) -> u32;
}
///Generated by `#[ttipc::procedures]`: routes a `(name, args)` pair to the matching [`Counted`] procedure.
trait CountedDispatch: Counted {
    /// Routes one `(procedure, args)` call to the matching method:
    /// deserializes the wire arguments, resolves injected
    /// parameters from `ctx`, and returns the dispatch outcome.
    fn dispatch(
        &self,
        _ctx: &::tauri_typed_ipc::Context<'_>,
        procedure: &str,
        args: ::tauri_typed_ipc::__private::serde_json::Value,
    ) -> ::tauri_typed_ipc::Dispatch {
        match procedure {
            "hits" => {
                ::tauri_typed_ipc::Dispatch::Sync(
                    (|| -> ::core::result::Result<
                        ::tauri_typed_ipc::Outcome,
                        ::tauri_typed_ipc::DispatchError,
                    > {
                        #[derive(::tauri_typed_ipc::__private::serde::Deserialize)]
                        #[serde(crate = "::tauri_typed_ipc::__private::serde")]
                        struct Args {}
                        let Args {} = ::tauri_typed_ipc::__private::serde_json::from_value(
                                args,
                            )
                            .map_err(::tauri_typed_ipc::DispatchError::Deserialize)?;
                        let state = _ctx
                            .state::<Hits>()
                            .ok_or(
                                ::tauri_typed_ipc::DispatchError::MissingState(
                                    ::core::any::type_name::<Hits>(),
                                ),
                            )?;
                        ::tauri_typed_ipc::__private::serde_json::to_value(
                                Counted::hits(&*self, state),
                            )
                            .map(::tauri_typed_ipc::Outcome::Resolve)
                            .map_err(::tauri_typed_ipc::DispatchError::Serialize)
                    })(),
                )
            }
            _ => {
                ::tauri_typed_ipc::Dispatch::Sync(
                    ::core::result::Result::Err(
                        ::tauri_typed_ipc::DispatchError::UnknownProcedure(
                            ::std::borrow::ToOwned::to_owned(procedure),
                        ),
                    ),
                )
            }
        }
    }
    /// Type-erases this set for registration with
    /// `ttipc::handler`. The bounds are tauri's
    /// `invoke_handler` bounds, inherited through
    /// `ttipc::Procedures::new`.
    fn into_procedures(self) -> ::tauri_typed_ipc::Procedures
    where
        Self: ::core::marker::Sized + ::core::marker::Send + ::core::marker::Sync
            + 'static,
    {
        ::tauri_typed_ipc::Procedures::new(
            &["hits"],
            move |ctx, procedure, args| {
                CountedDispatch::dispatch(&self, ctx, procedure, args)
            },
        )
    }
}
impl<T: Counted> CountedDispatch for T {}
///Generated by `#[ttipc::procedures]`: the binding descriptor for [`Counted`]. Hand to `ttipc::Bindings::register` to emit the TypeScript client.
struct CountedProcedures;
impl ::tauri_typed_ipc::ProcedureSet for CountedProcedures {
    const OBJECT: &'static str = "counted";
    fn procedures(
        types: &mut ::tauri_typed_ipc::__private::specta::Types,
    ) -> ::std::vec::Vec<::tauri_typed_ipc::ProcedureType> {
        ::std::vec![
            ::tauri_typed_ipc::ProcedureType { name : "hits", args : ::std::vec![],
            channels : ::std::vec![], output : < u32 as
            ::tauri_typed_ipc::__private::specta::Type > ::definition(types), error :
            ::core::option::Option::None, },
        ]
    }
}
